# msuc-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml
resources/test/: msuc_double_digit_rows.html  msuc_search_error_500.html  msuc_search_ms08-067.html  msuc_search_too_many_results.html  msuc_search_with_next_page.html  msuc_small_result.html  msuc_update_details.html  msuc_update_details_never_restarts.html
src/: client.rs  lib.rs  model.rs  parser.rs  prelude.rs
tests/: get_update.rs  stream.rs
