[package]
name = "msuc"
description = "A client library for the Microsoft Update Catalog"
repository = "https://github.com/TylerSchmidtke/msuc-rs"
homepage = "https://github.com/TylerSchmidtke/msuc-rs"
keywords = ["microsoft", "update", "catalog"]
license = "MIT"
readme = "README.md"
version = "0.1.1"
edition = "2021"
authors = ["Tyler Schmidtke <tyler@schmidtke.dev>"]
exclude = [
    "resources/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
thiserror = { version = "1.0.48", features = [] }
scraper = "0.17"
chrono = "0.4.31"
url = "2.4.1"

[dev-dependencies]
tokio-test = "0.4.3"

[features]
default = []
blocking = ["reqwest/blocking"]
