[package]
name = "msuc"
description = "A client library for the Microsoft Update Catalog"
repository = "https://github.com/TylerSchmidtke/msuc-rs"
homepage = "https://github.com/TylerSchmidtke/msuc-rs"
keywords = ["microsoft", "update", "catalog"]
license = "MIT"
readme = "README.md"
version = "1.0.0"
edition = "2021"
authors = ["Tyler Schmidtke <tyler@schmidtke.dev>"]
exclude = [
    "resources/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.21"
thiserror = "1.0.49"
scraper = "0.17"
chrono = "0.4.31"
url = "2.4.1"
async-trait = { version = "0.1.74", optional = true }


[dev-dependencies]
tokio-test = "0.4.3"
tokio = { version = "1.33.0", features = ["macros", "tokio-macros"] }

[features]
default = [
    "dep:async-trait",
]
blocking = ["reqwest/blocking"]
